Coordenadas testeadas en snapshot, todo funcionando